@@ -1,3 +1,7 @@
+2006-12-16  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gstring.c: Move documentation inline. 
+
 2006-12-15  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/giochannel.h: Make ref_count a gint to avoid
